--- a/no.2/templates/todo.html
+++ b/no.2/templates/todo.html
@@ -7,6 +7,13 @@
     <h2>Add To-Do Item</h2>
 
     <form method="POST" action="/submittodoitem">
+<label>Item ID:</label><br>
+<input type="number" name="itemId" required><br><br>
+<label>Item UUID:</label><br>
+<input type="text" name="itemUUID" required><br><br>
+<label>Item Hash:</label><br>
+<input type="text" name="itemHash" required><br><br>
+
         <label>Item Name:</label><br>
         <input type="text" name="itemName" required><br><br>
 
